# classic-e

./: Cargo.toml  README.md  TODO.md  UI.md  arialn.fnt  ibm.fnt  robotocl30.fnt  test-hstack.trace
base/: Cargo.toml
base/src/: complex.rs  cuboid.rs  extent.rs  lib.rs  mat.rs  mat2x2.rs  mat3x3.rs  mat3x3a.rs  mat4x4.rs  multivec2.rs  multivec3.rs  multivec4.rs  pixel.rs  quat.rs  rect.rs  simd.rs  ten.rs  vec2.rs  vec3.rs  vec3a.rs  vec4.rs
bindgen/vulkan-sys/: Cargo.toml  build.rs  make.sh  wrapper.h
bindgen/vulkan-sys/src/: bindings.rs
bindgen/xcb-sys/: Cargo.toml  build.rs  wrapper.h
bindgen/xcb-sys/src/: bindings.rs
e_base/: Cargo.toml
e_base/src/: complex.rs  mat2x2.rs  mat3x3.rs  multivec2.rs  quat.rs
e_gpu/: Cargo.toml
e_gpu/examples/: test-instance.rs
e_gpu/src/: lib.rs
e_gpu/src/gles20/: mod.rs
e_gpu/src/metal/: mod.rs
e_gpu/src/opengl45/: indexbuffer.rs  shader.rs  texture2darray.rs  texture3d.rs  texturecube.rs
e_gpu/src/vulkan/: gpu.rs  mod.rs  queue.rs  session.rs  surface.rs
e_gpu/src/webgl/: mod.rs
e_gpu/src/webgpu/: mod.rs
e_image/: Cargo.toml
e_image/src/: lib.rs
e_platform/: Cargo.toml
e_platform/examples/: test-window.rs
e_platform/src/: lib.rs
e_platform/src/linux/: mod.rs  window.rs
e_system/: Cargo.toml
e_system/examples/: test-window.rs
e_system/src/linux/: system.rs  window.rs
e_ui/: Cargo.toml
e_ui/examples/: test-basic.rs  test-multi.rs  test-text.rs
e_ui/src/: NOTES.md  action.rs  book.rs  button.rs  datepicker.rs  draw.rs  filepicker.rs  grid.rs  image.rs  lib.rs  messagebox.rs  progress.rs  scrollbar.rs  slider.rs  splitter.rs  stack.rs  timepicker.rs  toggle.rs  tooltip.rs  tree.rs  ui.rs
examples/: make.sh  test-book.rs  test-button.rs  test-hstack.rs  test-image.rs  test-text.rs  test-triangle-frag.glsl  test-triangle-vert.glsl  test-triangle.rs  test-vstack.rs  test-window.rs
gpu/: Cargo.toml
gpu/src/: lib.rs
gpu/src/opengl45/: dataformats.rs  framebuffer.rs  graphics.rs  indexbuffer.rs  mod.rs  shader.rs  texture1d.rs  texture2d.rs  texture2darray.rs  texture3d.rs  texturecube.rs  uniformbuffer.rs  vertexbuffer.rs
imageformats/: Cargo.toml
imageformats/src/: bmp.rs  jpeg.rs  lib.rs  png.rs
platform/: Cargo.toml
platform/examples/: test-window.rs
platform/src/: lib.rs  linux.rs
platform/src/linux/: system.rs  window.rs
platform/src/windows/: system.rs
src/: TODO.md  complex.rs  lib.rs  mat.rs  matrix.rs  multivec2.rs  multivec3.rs  multivec4.rs  multivector.rs  pixel.rs  quat.rs  rect.rs  simd.rs  system.rs  ten.rs  vec2.rs  vec3.rs  vec3a.rs  vec4.rs  vector.rs  window.rs  zero.rs  zeroone.rs
src/base/: mat.rs  mat4x4.rs  mod.rs  pixel.rs  vec2.rs  vec4.rs
src/gpu/: mod.rs
src/gpu/directx12/: mod.rs
src/gpu/gles20/: mod.rs
src/gpu/metal/: mod.rs
src/gpu/opengl45/: compute.rs  dataformats.rs  framebuffer.rs  gpu.rs  graphics.rs  indexbuffer.rs  mod.rs  shader.rs  texture1d.rs  texture2d.rs  texture2darray.rs  texture3d.rs  texturecube.rs  uniformbuffer.rs  vertexbuffer.rs
src/gpu/vulkan/: commandbuffer.rs  fence.rs  framebuffer.rs  gpu.rs  graphicspipeline.rs  image.rs  imageview.rs  mod.rs  pipelinelayout.rs  queue.rs  renderpass.rs  semaphore.rs  session.rs  shader.rs  surface.rs  swapchain.rs
src/gpu/webgl/: mod.rs
src/gpu/webgpu/: mod.rs
src/image/: bmp.rs  gif.rs  jpeg.rs  mod.rs  pbm.rs  png.rs  tga.rs  tiff.rs  webp.rs  xbm.rs
src/platform/: android.rs  ios.rs  linux.rs  mod.rs  windows.rs
src/system/: README.md  android.rs  gles20.rs  ios.rs  linux.rs  macos.rs  mod.rs  web.rs  webgl.rs  windows.rs
src/ui/: MODEL.md  NOTES.md  TODO.md  _remnants.rs  book.rs  button.rs  core.rs  dc.rs  field.rs  font.rs  gc.rs  hstack.rs  image.rs  list.rs  menu.rs  menubar.rs  mod.rs  page.rs  progress.rs  slider.rs  stepper.rs  text.rs  texture2darrayatlas.rs  toggle.rs  ui.rs  vstack.rs  widgetengine.rs
static/fonts/: cond.fnt  condb.fnt  condi.fnt  mono.fnt  monob.fnt  monoi.fnt  sans.fnt  sansb.fnt  sansi.fnt  serif.fnt  serifb.fnt  serifi.fnt
sys-sys/: Cargo.toml  make.sh  wrapper.h
sys-sys/src/: bindings.rs
tools/mkfnt/: Cargo.toml
try/: mkfnt.rs  world.png~
try/fonts/: chomsky.fnt  cutive.fnt  fenix.fnt  ilove.fnt  king.fnt  mermaid.fnt  mono.fnt  montserrat.fnt  montserratb.fnt  noto.fnt  notob.fnt  notobi.fnt  notoi.fnt  pixelmix.fnt  riesling.fnt  roboto.fnt  robotob.fnt  robotobi.fnt  robotoc.fnt  robotocb.fnt  robotocbi.fnt  robotoci.fnt  robotocl.fnt  robotocli.fnt  robotoi.fnt  robotok.fnt  robotoki.fnt  robotol.fnt  robotoli.fnt  robotom.fnt  robotomi.fnt  robotot.fnt  robototi.fnt  space.fnt  vollkorn.fnt  vollkornb.fnt  vollkornbi.fnt  vollkorni.fnt
try/msdf-rs/: Cargo.toml
try/previous1/: android.rs  android_gles2.rs  application.rs  bmp.rs  gif.rs  image.rs  jpeg.rs  lib.rs  linux_alsa.rs  linux_xcb_egl_gles2.rs  linux_xcb_glx_opengl45.rs  linux_xcb_vulkan.rs  matrix.rs  pbm.rs  png.rs  rect.rs  tga.rs  tiff.rs  vector.rs  web_webaudio.rs  web_webgl.rs  webp.rs  widget.rs  windows_direct3d12.rs  windows_directsound.rs  windows_gles2.rs  windows_opengl45.rs  windows_vulkan.rs  xbm.rs
try/previous2/: system.rs  window.rs
try/src/: grid.rs  lib.rs  menubar.rs  mod.rs  mod.rs-old  shader.rs-old  texture2d.rs-old  texture2darray.rs-old  todo.txt
ui/: Cargo.toml
ui/examples/: test-basic.rs  test-book.rs  test-button.rs  test-hstack.rs  test-image.rs  test-multi.rs  test-text.rs  test-vstack.rs
ui/examples/old/: test-book.rs  test-button.rs  test-hstack.rs  test-image.rs  test-menu.rs  test-multi.rs  test-vstack.rs
ui/src/: NOTES.md  accordeon.rs  action.rs  book.rs  button.rs  colorpicker.rs  datepicker.rs  draw.rs  field.rs  filepicker.rs  font.rs  grid.rs  hstack.rs  image.rs  lib.rs  list.rs  menu.rs  menubar.rs  messagebox.rs  progress.rs  scrollbar.rs  scroller.rs  slider.rs  splitter.rs  stack.rs  stepper.rs  style.rs  styles.rs  text.rs  timepicker.rs  toggle.rs  toolbar.rs  tooltip.rs  tree.rs  ui.rs  vstack.rs
ui/src/old/: book.rs  button.rs  hstack.rs  image.rs  menubar.rs  text.rs  ui.rs  vstack.rs
(+74 files in other folders)
