[workspace]

members = [
    "e_base",
    "e_platform",
    "e_gpu",
    "e_image",
    "e_ui",
]

# compile as fast as possible, and make everything clear
[profile.dev]
opt-level = 0
debug = true
lto = true
codegen-units = 28

# improve the performance of the resulting code as much as possible
[profile.release]
opt-level = 3
debug = false
lto = "fat"
codegen-units = 1
