[package]
name = "e_system"
version = "0.1.0"
authors = ["Desmond Germans <desmond@germansmedia.nl>"]
edition = "2018"

[lib]
name = "e_system"
crate-type = ["rlib"]

[build-dependencies]
bindgen = "*"

[dependencies]
e_base = { version = "*", path = "../e_base" }
libc = "*"

[target.'cfg(unix)'.dependencies]
xcb-sys = { version = "*", path = "../bindgen/xcb-sys" }
#x11 = { version = "2.18.1", features = ["xlib","glx"] }
#xcb = { version = "0.8", features = ["xlib_xcb","dri2"] }
#gl = { version = "0.14.0" }

[target.'cfg(windows)'.dependencies]
winapi = { version = "*", features = ["winuser","libloaderapi"] }
gl = "*"