[package]
name = "e_ui"
version = "0.1.0"
authors = ["Desmond Germans <desmond@germansmedia.nl>"]
edition = "2018"

[lib]
name = "e_ui"
crate-type = ["rlib"]

[dependencies]
e_base = { version = "*", path = "../e_base" }
e_platform = { version = "*", path = "../e_platform" }
e_gpu = { version = "*", path = "../e_gpu" }
e_image = { version = "*", path = "../e_image" }
