[package]
name = "gpu"
version = "0.1.0"
authors = ["Desmond Germans <desmond@germansmedia.nl>"]
edition = "2018"

[lib]
name = "gpu"
crate-type = ["rlib"]

[dependencies]
libc = "*"
base = { version = "*", path = "../base" }
platform = { version = "*", path = "../platform" }

[target.'cfg(unix)'.dependencies]
x11 = { version = "2.18.1", features = ["xlib","glx"] }
xcb = { version = "0.8", features = ["xlib_xcb","dri2"] }
gl = { version = "0.14.0" }

[target.'cfg(windows)'.dependencies]
libc = "*"
winapi = { version = "*", features = ["winuser","libloaderapi"] }
gl = "*"
