[package]
name = "ui"
version = "0.1.0"
authors = ["Desmond Germans <desmond@germansmedia.nl>"]
edition = "2018"

[lib]
name = "ui"
crate-type = ["rlib"]

[dependencies]
base = { version = "*", path = "../base" }
platform = { version = "*", path = "../platform" }
gpu = { version = "*", path = "../gpu" }
imageformats = { version = "*", path = "../imageformats" }
